refactor: Adiciona Dtos e seus mapeamentos.
Muda listar todos os registros.

Passa a utilizar @softDelete do hibernate